--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,40 @@
-aiofiles==23.2.1
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.0
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.6.2.post1
 asgiref==3.8.1
-attrs==24.2.0
-beautifulsoup4==4.12.3
-boto3==1.36.6
-botocore==1.36.6
-bs4==0.0.2
-certifi==2024.8.30
+CacheControl==0.14.2
+cachetools==5.5.1
+certifi==2025.1.31
 cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.0
-chromedrivermanager==0.0.1
-click==8.1.7
-colorama==0.4.6
-cryptography==43.0.3
-customtkinter==5.2.2
-darkdetect==0.8.0
-dataclasses-json==0.6.7
-defusedxml==0.7.1
-distro==1.9.0
-dj-database-url==2.2.0
-Django==3.2.8
-django-allauth==0.63.6
-django-bootstrap-datepicker-plus==5.0.5
-django-choices==2.0.0
-django-countries==7.6.1
-django-crispy-forms==2.0
-django-model-utils==5.0.0
-django-multiselectfield==0.1.13
-django-storages==1.14.4
-fastapi==0.115.5
-ffmpy==0.4.0
-filelock==3.16.1
-frozenlist==1.5.0
-fsspec==2024.10.0
-gradio==5.5.0
-gradio_client==1.4.2
-greenlet==3.1.1
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.6
-httpx==0.27.2
-huggingface-hub==0.26.2
+charset-normalizer==3.4.1
+cryptography==44.0.0
+Django==5.1.6
+django-cors-headers==4.7.0
+django-rest-framework==0.1.0
+djangorestframework==3.15.2
+firebase-admin==6.6.0
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.20.0
+google-cloud-storage==3.0.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+httplib2==0.22.0
 idna==3.10
-Jinja2==3.1.4
-jmespath==1.0.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.1.16
-langchain-community==0.0.38
-langchain-core==0.1.53
-langchain-openai==0.0.8
-langchain-pinecone==0.0.3
-langchain-text-splitters==0.0.2
-langchainhub==0.1.21
-langsmith==0.1.143
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.23.1
-mdurl==0.1.2
-multidict==6.1.0
-mypy-extensions==1.0.0
-mysql-connector-python==9.1.0
-numpy==1.26.4
-oauthlib==3.2.2
-openai==1.13.3
-orjson==3.10.11
-outcome==1.3.0.post0
-package_name==0.1
-packaging==23.2
-pandas==2.2.3
-pillow==11.0.0
-pinecone-client==3.1.0
-propcache==0.2.0
-psycopg2-binary==2.9.10
-pychrome==0.2.4
+msgpack==1.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydub==0.25.1
-Pygments==2.18.0
-pypiwin32==223
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-python-multipart==0.0.12
-python3-openid==3.2.0
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-regex==2024.11.6
+PyJWT==2.10.1
+pyparsing==3.2.1
 requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-ruff==0.7.3
-s3transfer==0.11.2
-safehttpx==0.1.1
-schedule==1.2.2
-selenium==4.25.0
-semantic-version==2.10.0
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-SQLAlchemy==2.0.36
+rsa==4.9
 sqlparse==0.5.3
-starlette==0.41.2
-stripe==11.4.1
-tenacity==8.5.0
-tiktoken==0.8.0
-tomlkit==0.12.0
-tqdm==4.67.0
-trio==0.27.0
-trio-websocket==0.11.1
-typer==0.13.0
-types-requests==2.32.0.20241016
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-uvicorn==0.32.0
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-websockets==12.0
-wsproto==1.2.0
-yarl==1.17.1
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
